Fixed navigation menu not showing when clicked

--- a/src/styles/dashboardscreen.css
+++ b/src/styles/dashboardscreen.css
@@ -1,5 +1,3 @@
-.dashboard-screen {
+body {
     background: linear-gradient(90deg, rgba(249,154,147,1) 0%, rgba(249,196,130,1) 100%);
-    height: 100vh;
-    width: 100%;
 }
